--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instagram</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/style.css">
 </head>
 <body>
     <div class="box">
         <div class="instagram-phone">
-            <img src="./imagens/instagram-celular.png" alt="imagem do celular" class="celular">
+            <img src="src/imagens/instagram-celular.png" alt="imagem do celular" class="celular">
         </div>
         <div class="login">
             <div class="grupo">
-                <img src="./imagens/instagram-logo.png" class="instagram-logo" alt="logo instagram">
+                <img src="src/imagens/instagram-logo.png" class="instagram-logo" alt="logo instagram">
                 <div class="photo">
-                    <img src="./imagens/cabelo-cacheado.png"  alt="foto de perfil">
+                    <img src="src/imagens/cabelo-cacheado.png"  alt="foto de perfil">
                 </div>
                 <a href="#" class="instagram-login">Continue como KarolT</a>
                 <a href="#" class="logout">Remover conta</a>
